# pulse

./: .gitignore  README.md  pyproject.toml
collectors/: __init__.py  claude.py  outlook.py  system.py
docs/: data.json  index.html
docs/superpowers/plans/: 2026-05-22-pulse-implementation.md
docs/superpowers/specs/: 2026-05-22-pulse-design.md
harmony-app/public/: app.js  index.html
pulse/: __init__.py  cli.py  harmony_data.py  paths.py  publish.py  render.py
scripts/: dev.pulse.update.plist.template
templates/: dashboard.html.j2
templates/themes/: dashboard.pink.html.j2
tests/: conftest.py  test_claude_collector.py  test_claude_privacy.py  test_claude_streaks.py  test_cli.py  test_cli_launch_agent.py  test_outlook_collector.py  test_outlook_privacy.py  test_paths.py  test_publish.py  test_render.py  test_smoke.py  test_system_collector.py
tests/fixtures/: claude_session_fixture.jsonl  outlook_response_with_subjects.json
