[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulse-kindle"
version = "0.1.0"
description = "Always-on Kindle status dashboard for Claude Code + Mac telemetry"
requires-python = ">=3.11"
dependencies = [
    "psutil>=5.9",
    "Jinja2>=3.1",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-mock>=3.12",
]

[project.scripts]
pulse = "pulse.cli:main"

[tool.setuptools.packages.find]
include = ["pulse*", "collectors*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
